<!-- item_turf_card.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Turf Image -->
    <ImageView
        android:id="@+id/imageViewTurf"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_turf_image"
        android:contentDescription="@string/turf_image"/>

    <!-- Turf Name -->
    <TextView
        android:id="@+id/textViewTurfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/default_turf_name"/>

    <!-- Turf Location -->
    <TextView
        android:id="@+id/textViewTurfLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:text="@string/default_turf_location"/>


</LinearLayout>
