<!-- activity_login.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingTop="32dp"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp"
    android:background="#C8AEF4">

    <ImageView
        android:layout_width="325dp"
        android:layout_height="316dp"
        android:layout_below="@+id/googleSignInButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/app_logo_desc"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Forgot Password?"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:clickable="true" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary" />

    <TextView
        android:id="@+id/orTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LoginButton"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textColor="@color/black" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orTextView"
        android:layout_marginTop="24dp" />

</RelativeLayout>
